Fix: code block readability for long lines

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -145,3 +145,8 @@
 .DocSearch {
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
+
+/* Makes code blocks with very long lines readable */
+code {
+  white-space: pre-wrap !important;
+}
